// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render Mistakes renders Mistakes with 0 count 1`] = `
<div
  className="game__mistakes"
/>
`;

exports[`render Mistakes renders Mistakes with 3 count 1`] = `
<div
  className="game__mistakes"
>
  <div
    className="wrong"
  />
  <div
    className="wrong"
  />
  <div
    className="wrong"
  />
</div>
`;
